--- a/vite-project/src/components/Turnos/TurnosNavigation.module.css
+++ b/vite-project/src/components/Turnos/TurnosNavigation.module.css
@@ -5,6 +5,7 @@
   justify-content: center;
   padding: 5px;
   margin: 0 auto;
+  margin-top: 5rem;
   width: 100%;
   max-width: 1200px;
   box-sizing: border-box;
