--- a/vite-project/src/components/Footer/Footer.module.css
+++ b/vite-project/src/components/Footer/Footer.module.css
@@ -1,34 +1,17 @@
-/* * {
-  box-sizing: border-box;
-}
-
-main {
-  display: flex;
-  flex-direction: column;
-}
-
-body {
-  margin: 0;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  overflow-x: hidden;
-} */
-
 .footer {
-  height: auto;
-  position: relative;
-  margin-top: 135px;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
   background-color: #373434;
-  padding: 0.625rem;
-  text-align: center;
+  width: 100vw;
+  height: auto;
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  text-align: center;
+  position: fixed; /* Fija el footer */
+  bottom: 0; /* Lo posiciona en la parte inferior */
+  left: 0; /* Lo alinea a la izquierda */
+  padding: 0.625rem;
+  flex-direction: column;
   align-items: center;
+  z-index: 100; /* Asegura que el footer esté encima de otros elementos si es necesario */
 }
 
 .copyright {
