--- a/vite-project/src/styles/App.css
+++ b/vite-project/src/styles/App.css
@@ -1,7 +1,14 @@
 #root {
-  max-width: 1280px;
-  text-align: center;
+  width: 100vw;
+  max-width: 1200px; /* Mantiene el ancho máximo */
+  margin: auto; /* Centra el contenido horizontalmente */
+  box-sizing: border-box;
+  flex-direction: column; /* Coloca los elementos en columna */
+  justify-content: center; /* Centra verticalmente */
+  align-items: center; /* Centra horizontalmente */
 }
+
+/*  */
 
 /* .logo { 
   height: 6em;
