--- a/vite-project/src/views/Home/Home.module.css
+++ b/vite-project/src/views/Home/Home.module.css
@@ -1,11 +1,10 @@
 .home-container {
-  padding: 2rem; /* Ajusta el padding según sea necesario */
-}
-
-.title {
-  text-align: center;
-  font-size: 2rem;
+  padding: 2rem;
+  max-width: 1200px;
+  margin: 0 auto; /* Centrará el contenido */
+  margin-top: 3rem;
   margin-bottom: 3rem;
+  width: 100%;
 }
 
 .subtitle {
@@ -19,6 +18,7 @@
 
 .botones-navbar {
   display: flex;
+  flex-wrap: wrap; /* Permite que los botones se ajusten en pantallas pequeñas */
   gap: 15px;
   margin-top: 3px;
   margin-left: 10px;
@@ -60,4 +60,54 @@
   transform: skewX(-45deg) scale(1, 1);
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+}
+
+.title {
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 3rem;
+}
+@media (max-width: 768px) {
+  .title {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .title {
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .subtitle {
+    font-size: 3rem; /* Tamaño para tablets o pantallas medianas */
+  }
+}
+
+@media (max-width: 480px) {
+  .subtitle {
+    font-size: 2.5rem; /* Tamaño para celulares */
+  }
+}
+
+@media (max-width: 320px) {
+  .subtitle {
+    font-size: 2rem; /* Tamaño para pantallas muy pequeñas */
+  }
+}
+
+/* Botones más pequeños para pantallas pequeñas */
+@media (max-width: 768px) {
+  .boton {
+    padding: 6px 10px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  .boton {
+    padding: 5px 8px;
+    font-size: 12px;
+  }
 }
