--- a/vite-project/src/views/About/About.module.css
+++ b/vite-project/src/views/About/About.module.css
@@ -3,4 +3,6 @@
   text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.976);
   font-size: 3rem;
   margin-bottom: 3rem;
+  margin-top: 5rem;
+  text-align: center;
 }
