--- a/vite-project/src/components/ContactosForm/ContactoForm.module.css
+++ b/vite-project/src/components/ContactosForm/ContactoForm.module.css
@@ -5,7 +5,7 @@
   align-items: center;
   padding: 20px;
   margin: auto;
-  margin-bottom: 40px;
+  margin-bottom: 5rem;
   width: 100%;
   max-width: 1200px;
   height: auto;
