--- a/vite-project/src/views/Contactos/Contactos.module.css
+++ b/vite-project/src/views/Contactos/Contactos.module.css
@@ -3,10 +3,13 @@
   text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.976);
   font-size: 3rem;
   margin-bottom: 3rem;
+  margin-top: 5rem;
   text-shadow: 2px 2px 4px rgb(255, 255, 255);
+  text-align: center;
 }
 
 p {
   font-size: 1.2rem;
   margin-bottom: 1rem;
+  text-align: center;
 }
